[package]
name = "bpf-tools"
version = "0.0.1"
authors = ["Brian Martin <bmartin@twitter.com>"]
description = "eBPF tools implemented in Rust"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-bpf/tools"
homepage = "https://github.com/rust-bpf/tools"
keywords = ["bpf", "ebpf", "bcc", "tools"]

[dependencies]
bcc = "0.0.15"
clap = "2.33.0"
ctrlc = "3.1.3"
failure = "0.1.5"

[[bin]]
name = "runqlat"
path = "src/runqlat/main.rs"

[[bin]]
name = "tcpconnect"
path = "src/tcpconnect/main.rs"

[features]
static = ["bcc/static"]
bcc_specific = []
bcc_v0_8_0 = ["bcc/v0_8_0","bcc_specific"]
bcc_v0_9_0 = ["bcc/v0_9_0","bcc_specific"]
bcc_v0_10_0 = ["bcc/v0_10_0","bcc_specific"]
bcc_v0_11_0 = ["bcc/v0_11_0","bcc_specific"]
bcc_v0_12_0 = ["bcc/v0_12_0","bcc_specific"]
