[package]
name = "bpf-tools"
version = "0.0.1"
authors = ["Brian Martin <bmartin@twitter.com>"]
description = "eBPF tools implemented in Rust"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-bpf/tools"
homepage = "https://github.com/rust-bpf/tools"
keywords = ["bpf", "ebpf", "bcc", "tools"]

[dependencies]
bcc = "0.0.22"
byteorder = "1.3.4"
clap = "2.33.1"
ctrlc = "3.1.4"
failure = "0.1.8"
libc = "0.2.74"
multimap = "0.8.1"

[[bin]]
name = "execsnoop"
path = "src/execsnoop/main.rs"

[[bin]]
name = "hardirqs"
path = "src/hardirqs/main.rs"

[[bin]]
name = "runqlat"
path = "src/runqlat/main.rs"

[[bin]]
name = "syscalls"
path = "src/syscalls/main.rs"

[[bin]]
name = "tcpconnect"
path = "src/tcpconnect/main.rs"

[features]
static = ["bcc/static"]
bcc_specific = []
bcc_v0_8_0 = ["bcc/v0_8_0","bcc_specific"]
bcc_v0_9_0 = ["bcc/v0_9_0","bcc_specific"]
bcc_v0_10_0 = ["bcc/v0_10_0","bcc_specific"]
bcc_v0_11_0 = ["bcc/v0_11_0","bcc_specific"]
bcc_v0_12_0 = ["bcc/v0_12_0","bcc_specific"]
bcc_v0_13_0 = ["bcc/v0_13_0","bcc_specific"]
bcc_v0_14_0 = ["bcc/v0_14_0","bcc_specific"]
bcc_v0_15_0 = ["bcc/v0_15_0","bcc_specific"]
llvm_8 = ["bcc/llvm_8"]
llvm_9 = ["bcc/llvm_9"]
